# PiSCAT

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: linux-test.yml  linux-tests.yml  piscat.yml  python-app.yml  static.yml
Tutorials/JupyterFiles/: README.md  Tutorial1.ipynb  Tutorial2.ipynb  Tutorial3.ipynb
build-recipes/: hook-piscat.py  hook-scipy.py  hook-skimage.py  macos_build_app.sh  macos_build_requirements.txt  macos_piscat.spec  piscat.icns  piscatLauncher.py  win_build_requirements.txt  win_make_iss.py  win_piscat.iss_dummy  win_piscat.spec
docs/: Makefile  README.md  appendix.rst  bibliography.rst  cite_us.rst  code_reference.rst  conf.py  download_tutorial_data.md  index.rst  installation.rst  make.bat  paper.bib  paper.md  plugin_UAI.rst  requirements.txt  tutorials.rst
docs/Tutorial1/: Tutorial1.md
docs/Tutorial2/: Tutorial2.md
docs/Tutorial3/: Tutorial3.md
docs/Tutorial4/: Tutorial4.md
docs/Tutorial_UAI_1/: Tutorial_UAI_1.md
docs/Tutorial_UAI_2/: Tutorial_UAI_2.md
docs/_static/: widestyle.css
piscat/: __init__.py  __main__.py  _version_save.py  utils.py
piscat/Analysis/: __init__.py  analysis_protein_histogram.py  analysis_protein_videos.py  analysis_protein_videos_anomaly.py  analysis_protein_videos_dnn_anomaly.py  plot_protein_histogram.py
piscat/Anomaly/: DNN_anomaly.py  __init__.py  anomaly_localization.py  hand_crafted_feature_genration.py  spatio_temporal_anomaly.py
piscat/BackgroundCorrection/: DRA.py  __init__.py  noise_floor.py
piscat/DNNModel/: FastDVDNet.py  __init__.py
piscat/GUI/: __init__.py  main.py
piscat/GUI/BackgroundCorrection/: DRA.py  __init__.py  fun_bgCorrection.py
piscat/GUI/BatchAnalysis/: batch_data.py  tab_analysis_protein.py  tab_bg_correction.py  tab_localization.py  tab_plot_histogram.py  tab_reading_data.py  tab_trajectory.py
piscat/GUI/CPU_Configurations/: Import_configuration.py  __init__.py  fun_CPU.py
piscat/GUI/InputOutput/: __init__.py  fun_reading.py  help.py  import_RAW.py  import_im2vid.py  save_GUI.py  video_cropping.py
piscat/GUI/Memory/: __init__.py  video_in_memory.py
piscat/GUI/Proccessing/: spectrum.py
piscat/GUI/ProgressBar/: __init__.py  fun_progressBar.py
piscat/GUI/Projects/: __init__.py  tab_anomaly_localization.py  tab_bg_correction.py  tab_handcrafted_anomaly.py  tab_localization.py  tab_plot_histogram.py  tab_trajectory.py
piscat/GUI/Projects/Anomaly/: GUI_Anomaly.py  __init__.py
piscat/GUI/Projects/Protein/: GUI_Protein.py  Noise_floor.py  __init__.py
piscat/GUI/Projects/iPSF/: iPSF_model.py
piscat/GUI/VideoAnalysis/: __init__.py  video_analysis.py  video_calculator.py
piscat/GUI/Visualization/: __init__.py  contrast_adjustment_GUI.py  fun_display_localization.py  image_viewer.py  play_setting.py  slice_view.py  temporal_annotation_setting.py  updating_plots.py
piscat/GUI/annotation/: __init__.py  annotation.py  line_annotate.py
piscat/GUI/icons/: Thumbs.db
piscat/InputOutput/: __init__.py  camera_setting.py  cpu_configurations.py  gpu_configurations.py  image_to_video.py  read_status_line.py  read_write_data.py  reading_videos.py  write_video.py
piscat/Localization/: __init__.py  data_handeling.py  data_handling.py  difference_of_gaussian.py  directional_intensity.py  frst.py  gaussian_2D_fit.py  localization_filtering.py  particle_localization.py  radial_symmetry_centering.py
piscat/Plugin/: __main__.py
piscat/Plugins/: __main__.py
piscat/Preproccessing/: FPNc.py  __init__.py  applying_mask.py  filtering.py  normalization.py  patch_genrator.py
piscat/Trajectory/: __init__.py  data_handeling.py  data_handling.py  particle_linking.py  temporal_filtering.py
piscat/Tutorials/: __main__.py  startup.py
piscat/Tutorials/JupyterFiles/: README.md  Tutorial1.ipynb  Tutorial2.ipynb  Tutorial3.ipynb  Tutorial4.ipynb  Tutorial5.ipynb  Tutorial_CPU_GPU_configurartion.ipynb  Tutorial_UAI_1.ipynb  Tutorial_UAI_2.ipynb
piscat/Visualization/: __init__.py  contrast_adjustment.py  display.py  display_html.py  display_jupyter.py  plot.py  print_colors.py
piscat/iPSF_model/: ImagingSetupParameters.py  L_theta.py  ScatteredFieldDifferentialPhase.py  VectorialDiffractionIntegral.py
tests/: README.md  test_smoke.py  test_tutorials.py
tests/BackgroundCorrection/: test_DRA.py  test_noisefloor.py
tests/Fixtures/: shared.py
tests/Localization/: test_particle_localization.py
tests/Module/: .coveragerc  setup.py
tests/Module/Analysis/: analysis_protein_histogram_test.py  analysis_protein_videos_test.py
tests/Module/BackgroundCorrection/: DRA_test.py  fixture.py  noise_floor_test.py
tests/Module/InputOutput/: camera_setting_test.py  cpu_configurations_test.py  gpu_configurations_test.py  image_to_video_test.py  read_status_line_test.py  read_write_data_test.py  reading_videos_test.py  write_video_test.py
tests/Module/Localization/: directional_intensity_test.py  fixture.py  localization_filtering_test.py  particle_localization_test.py
tests/Module/Preproccessing/: FPNc_test.py  applying_mask_test.py  filtering_test.py  normalization_test.py
tests/Module/Trajectory/: data_handeling_test.py  data_handling_test.py  fixture.py  particle_linking_test.py  temporal_filtering_test.py
tests/Preproccessing/: test_normalization.py
tests/data/: differential_rolling.pck  differential_rolling_FFT_flag.pck  expected_dra_result_1.pck  preprocessing_normalization.pck
